cmake_minimum_required(VERSION 3.26)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA Maths/gcd_lcm.cpp)
add_executable(new_target Maths/prime_numbers.cpp)
add_executable(factorial Maths/factorial.cpp)
add_executable(combinations Maths/Combinations.cpp)
add_executable(modularecponentiation Maths/ModularExponentiation.cpp)
add_executable(factors Maths/Factors.cpp)
add_executable(coinchange DP/UnboundedKnapsack/CoinChange.cpp)
add_executable(palindromenumbers Maths/PalindromeNumbers.cpp)
add_executable(kadane DP/Kadane.cpp)
add_executable(longestSubstringWithoutRepeatingChar SlidingWIndow/variableLength/LongestSubstringWithoutRepeatingChar.cpp
        SlidingWIndow/variableLength/LongestSubarrayWithKDistinctChar.cpp)
add_executable(longestSubarrayWithKDistinctChar SlidingWIndow/variableLength/LongestSubarrayWithKDistinctChar.cpp)
add_executable(findAllAnagrams SlidingWIndow/fixedLength/FindAllAnagrams.cpp)
add_executable(backtracking_dp DP/Misc/BackTracking_DP.cpp)
add_executable(subarraysWithAtMostKDistinctIntegers SlidingWIndow/variableLength/SubarraysWithAtMostKDistinctIntegers.cpp)
add_executable(maxConsecutiveOnes SlidingWIndow/variableLength/MaxConsecutiveOnes.cpp)
add_executable(minimumWindowSubstring SlidingWIndow/variableLength/MinimumWindowSubstring.cpp)
