cmake_minimum_required(VERSION 3.26)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA Maths/gcd_lcm.cpp)
add_executable(new_target Maths/prime_numbers.cpp)
add_executable(factorial Maths/factorial.cpp)
add_executable(combinations Maths/Combinations.cpp)
add_executable(modularecponentiation Maths/ModularExponentiation.cpp)
add_executable(factors Maths/Factors.cpp)
add_executable(coinchange DP/UnboundedKnapsack/CoinChange.cpp)
add_executable(palindromenumbers Maths/PalindromeNumbers.cpp)
add_executable(kadane DP/Kadane.cpp)
add_executable(longestSubstringWithoutRepeatingChar SlidingWIndow/variableLength/LongestSubstringWithoutRepeatingChar.cpp
        SlidingWIndow/variableLength/LongestSubarrayWithKDistinctChar.cpp)
add_executable(longestSubarrayWithKDistinctChar SlidingWIndow/variableLength/LongestSubarrayWithKDistinctChar.cpp)
add_executable(findAllAnagrams SlidingWIndow/fixedLength/FindAllAnagrams.cpp)
add_executable(backtracking_dp DP/Misc/BackTracking_DP.cpp)
add_executable(subarraysWithAtMostKDistinctIntegers SlidingWIndow/variableLength/SubarraysWithAtMostKDistinctIntegers.cpp)
add_executable(maxConsecutiveOnes SlidingWIndow/variableLength/MaxConsecutiveOnes.cpp)
add_executable(minimumWindowSubstring SlidingWIndow/variableLength/MinimumWindowSubstring.cpp)
add_executable(sorting SearchingSorting/Sorting.cpp)
add_executable(streamMedian Heap/StreamMedian.cpp)
add_executable(balancedString SlidingWIndow/variableLength/BalancedString.cpp)
add_executable(reduceXtoZero SlidingWIndow/variableLength/ReduceXtoZero.cpp)
add_executable(subarrayProductLessThanK SlidingWIndow/variableLength/SubarrayProductLessThanK.cpp)
add_executable(2sum Array/2Sum.cpp)
add_executable(3Sum Array/3Sum.cpp)
add_executable(kSum Array/kSum.cpp)
add_executable(baseTemplate baseTemplate.cpp)
add_executable(8thRangeSumBST LeetCodeDD/January24/8thRangeSumBST.cpp)
add_executable(7thArithmeticSubsequencesII LeetCodeDD/January24/7thArithmeticSubsequencesII.cpp)
add_executable(10thBurningTree LeetCodeDD/January24/10thBurningTree.cpp
        LeetCodeDD/January24/21stHouseRobber.cpp
        Tree/Traversal/TopView.cpp
        Tree/Traversal/BoundaryTraversal.cpp
        Tree/Traversal/BottomView.cpp
        Tree/Traversal/LeftView.cpp
        Tree/Traversal/Inorder.cpp)
add_executable(11thMaximumDifferenceBetweenNodeandAncestor LeetCodeDD/January24/11thMaximumDifferenceBetweenNodeandAncestor.cpp)
add_executable(1stAssignCookies LeetCodeDD/January24/1stAssignCookies.cpp)
add_executable(13thMinStepsToMakeAnagram LeetCodeDD/January24/13thMinStepsToMakeAnagram.cpp)
add_executable(15thFindPlayersWithZeroorOneLosses LeetCodeDD/January24/15thFindPlayersWithZeroorOneLosses.cpp)
add_executable(14thDetermineTwoStringsClose LeetCodeDD/January24/14thDetermineTwoStringsClose.cpp)
add_executable(16thInsertDeleteGetRandom LeetCodeDD/January24/16thInsertDeleteGetRandom.cpp)
add_executable(ReverseNodesinkGroup LinkedList/ReverseNodesinkGroup.cpp)
add_executable(RotatedSortedArrayWithoutDuplicates SearchingSorting/BinarySearch/RotatedSortedArrayWithoutDuplicates.cpp)
add_executable(RotatedSortedArrayWithDuplicates SearchingSorting/BinarySearch/RotatedSortedArrayWithDuplicates.cpp)
add_executable(17thUniqueNumberofOccurrences LeetCodeDD/January24/17thUniqueNumberofOccurrences.cpp)
add_executable(FirstNonRepeatingCharInAStream LinkedList/FirstNonRepeatingCharInAStream.cpp)
add_executable(FirstNonRepeatingCharInAStream2 Queue/FirstNonRepeatingCharInAStream.cpp)
add_executable(19thMinFallingPathSum LeetCodeDD/January24/19thMinFallingPathSum.cpp)
add_executable(MedianOfTwoSortedArrays SearchingSorting/BinarySearch/MedianOfTwoSortedArrays.cpp)
add_executable(20thSumOfSubarrayMins LeetCodeDD/January24/20thSumOfSubarrayMins.cpp)
add_executable(21stHouseRobber LeetCodeDD/January24/21stHouseRobber.cpp)
add_executable(22ndSetMismatch LeetCodeDD/January24/22ndSetMismatch.cpp)
add_executable(FlattenBTtoLL Tree/FlattenBTtoLL.cpp)
add_executable(24thPseudoPalindromicPathsInBT LeetCodeDD/January24/24thPseudoPalindromicPathsInBT.cpp)
add_executable(23rdMaxLengthOfConcatenatedStringWithUniqueCharacters LeetCodeDD/January24/23rdMaxLengthOfConcatenatedStringWithUniqueCharacters.cpp)
add_executable(HeapSort SearchingSorting/Sorting/HeapSort.cpp)
add_executable(PathWithMaxGold BackTracking/PathWithMaximumGold.cpp)
add_executable(KthSmallestElementInaBST Tree/KthSmallestElementInaBST.cpp)
add_executable(25thLCS LeetCodeDD/January24/25thLCS.cpp)
add_executable(26thOutOfBoundaryPath LeetCodeDD/January24/26thOutOfBoundaryPath.cpp)
add_executable(29thImplementQueueUsingTwoStacks LeetCodeDD/January24/29thImplementQueueUsingTwoStacks.cpp)
add_executable(PalindromeLinkedList LinkedList/PalindromeLinkedList.cpp)
add_executable(StepsToReachDestination Maths/StepsToReachDestination.cpp)
add_executable(30thReversePolishNotation LeetCodeDD/January24/30thReversePolishNotation.cpp)
add_executable(30thNextWarmerDay LeetCodeDD/January24/31stNextWarmerDay.cpp)
add_executable(LongestCommonSubstring DP/LongestCommonSubstring.cpp)
add_executable(3rdPartitionArrayforMaximumSum LeetCodeDD/February24/3rdPartitionArrayforMaximumSum.cpp)
add_executable(5thFirstUniqueCharacterInStream LeetCodeDD/February24/5thFirstUniqueCharacterInStream.cpp)
add_executable(7thSortCharactersByFrequency LeetCodeDD/February24/7thSortCharactersByFrequency.cpp)
add_executable(TopKFrequentElements Heap/TopKFrequentElements.cpp)
add_executable(8thPerfectSquares LeetCodeDD/February24/8thPerfectSquares.cpp)
add_executable(LargestDivisibleSubset LeetCodeDD/February24/9thLargestDivisibleSubset.cpp)
add_executable(hello LeetCodeDD/hello.cpp)
add_executable(KMPStringMatching String/KMPStringMatching.cpp)
add_executable(11thCherryPickupII LeetCodeDD/February24/11thCherryPickupII.cpp)
add_executable(10thPalindromicSubString LeetCodeDD/February24/10thPalindromicSubString.cpp)
add_executable(12thMajorityElement LeetCodeDD/February24/12thMajorityElement.cpp)
add_executable(17thFurthestBuildingYouCanReach LeetCodeDD/February24/17thFurthestBuildingYouCanReach.cpp)
add_executable(18thMeetingRoomsIII LeetCodeDD/February24/18thMeetingRoomsIII.cpp)
add_executable(RightView Tree/Traversal/RightView.cpp)
add_executable(PostOrder Tree/Traversal/PostOrder.cpp)
add_executable(PreOrder Tree/Traversal/PreOrder.cpp)
add_executable(DiagonalTraversal Matrix/DiagonalTraversal.cpp)
add_executable(25thGCDTraversal LeetCodeDD/February24/25thGCDTraversal.cpp)
add_executable(RemoveNthNodeFromEndofList LeetCodeDD/March24/RemoveNthNodeFromEndofList.cpp)
add_executable(12thRemoveZeroSumConsecutiveNodes LeetCodeDD/March24/12thRemoveZeroSumConsecutiveNodes.cpp)
add_executable(13thFindThePivotInteger LeetCodeDD/March24/13thFindThePivotInteger.cpp
        LeetCodeDD/March24/13thFindthePivotInteger.cpp)
add_executable(13thFindthePivotInteger LeetCodeDD/March24/13thFindthePivotInteger.cpp)
add_executable(HeapInsertion Heap/HeapInsertion.cpp)
add_executable(6thHandOfStraights LeetCodeDD/June24/6thHandOfStraights.cpp)
